[workspace]
members = [
    "bencher",
	"program",
	"tools"
]
resolver = "2"

[workspace.package]
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
version = "0.1.0"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/magicblock-bencher"
readme = "../README.md"
keywords = ["solana", "crypto", "ephemeral-rollups", "magicblock", "benchmark"]

[workspace.dependencies]
pubkey = { package = "solana-pubkey", version = "2", features = [ "curve25519" ] }
serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.3"
