[workspace]
members = [
    "bencher",
	"program",
	"assist", 
	"core"
]
resolver = "2"

[workspace.package]
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
version = "0.1.0"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/magicblock-bencher"
readme = "../README.md"
keywords = ["solana", "crypto", "ephemeral-rollups", "magicblock", "benchmark"]

[workspace.dependencies]
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.0", features = [ "rt", "macros" ] }
hyper = { version = "1.0", features = [ "client", "http2" ] }
bincode = "1.3"

pubkey = { package = "solana-pubkey", version = "2", features = [ "curve25519" ] }
keypair = { package = "solana-keypair", version = "2.2" }
signer = { package = "solana-signer", version = "2.2" }
instruction = { package = "solana-instruction", version = "2.2" }
transaction = { package = "solana-transaction", version = "2", features = [ "bincode" ] }
