[workspace]
members = ["bencher", "program", "assist", "core"]
resolver = "2"

[workspace.package]
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
version = "0.1.0"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/magicblock-bencher"
readme = "../README.md"
keywords = ["solana", "crypto", "ephemeral-rollups", "magicblock", "benchmark"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
json = { package = "sonic-rs", version = "0.5" }
bincode = "1.3"
borsh = "1.5.7"

tokio = { version = "1.0", features = ["rt", "macros", "net"] }
hyper = { version = "1.0", features = ["client", "http2"] }
rand = "0.8"

pubkey = { package = "solana-pubkey", version = "2", features = ["curve25519"] }
keypair = { package = "solana-keypair", version = "2" }
signer = { package = "solana-signer", version = "2" }

instruction = { package = "solana-instruction", version = "2" }
systransaction = { package = "solana-system-transaction", version = "2" }
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[workspace.dependencies.transaction]
package = "solana-transaction"
version = "2.2"
features = ["bincode"]


[workspace.dependencies.sdk]
# version = "0.2.4"
package = "ephemeral-rollups-sdk"
git = "https://github.com/magicblock-labs/ephemeral-rollups-sdk.git"
rev = "b7d76dfb6"
