[package]
name = "bencher"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1.0", features = [ "rt", "macros" ] }
futures = "0.3"


serde = { version = "1.0", features = [ "derive" ] }
toml = "0.8"
sysinfo = { version = "0.33", default-features = false, features = [ "disk", "network", "system" ] }
prettytable-rs = "0.10"

duration = { package = "duration-str", version = "0.12", default-features = false, features = [ "serde" ] }


solana = { package = "solana-sdk", version = "2.1.7" }
rpc = { package = "solana-rpc-client", version = "2.1.7" }
rpc-api = { package = "solana-rpc-client-api", version = "2.1.7" }
pubsub = { package = "solana-pubsub-client", version = "2.1.7" }
sdk = { package = "ephemeral-rollups-sdk", path = "../../ephemeral-rollups-sdk/rust/sdk" }


benchprog = { package = "bencher-program", path = "../bencher-program" }
