[package]
name = "redline"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
fastwebsockets = { version = "0.10", features = ["upgrade", "unstable-split"] }

transaction = { workspace = true }
pubkey = { workspace = true }
keypair = { workspace = true }
signature = { package = "solana-signature", version = "2" }
signer = { workspace = true }
instruction = { workspace = true }
hash = { package = "solana-hash", version = "2" }
systransaction = { workspace = true }

program = { path = "../program", package = "redline-program" }
core = { path = "../core", package = "redline-core" }
sdk = { workspace = true }

json = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
bs58 = "0.5"
base64 = "0.22"
zstd = "0.13"

rand = "0.8"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
