[package]
name = "redline-core"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true }
hyper = { workspace = true }
toml = "0.8"
