[package]
name = "redline-core"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
pubkey = { workspace = true }
serde = { workspace = true }
json = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
serde_with = "3"
