[package]
name = "redline-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }


[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2"
serde = { workspace = true }
bincode = { workspace = true }
sha2 = "0.10"

[dependencies.sdk]
version = "0.2.4"
package = "ephemeral-rollups-sdk"
git = "https://github.com/magicblock-labs/ephemeral-rollups-sdk.git"
rev = "2e31e33"
