[package]
name = "redline-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }


[lib]
crate-type = ["cdylib", "lib"]
name = "redline"

[dependencies]
solana-program = "2.2"
pubkey = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
sha2 = "0.10"
sdk = { workspace = true }

[dev-dependencies]
solana-program-test = "2.2"
solana-sdk = "2.2"
